добавила frontend сервис главная страница, форма авторизации, страница с карточками растений и скрипты к ним

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,5 @@ include 'module.auth-service'
 include 'module.plant-service'
 include 'module.user-service'
 include 'module.webapi'
+include 'module.frontend-service'
+
