--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'module.plant-service'
 include 'module.user-service'
 include 'module.webapi'
 include 'module.frontend-service'
+include 'module.db-service'
 
