--- a/module.plant-service/build.gradle
+++ b/module.plant-service/build.gradle
@@ -20,12 +20,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.5'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.0.5'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-mysql'
+    implementation 'com.h2database:h2'
+    implementation 'org.projectlombok:lombok:1.18.24'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.5'
+    testImplementation 'junit:junit'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
