--- a/module.plant-service/src/main/resources/application.properties
+++ b/module.plant-service/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
 spring.flyway.baseline-on-migrate=true
+logging.level.ru.botanica=debug
