--- a/module.auth-service/build.gradle
+++ b/module.auth-service/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation 'org.springframework.security:spring-security-config:5.7.3'
     runtimeOnly 'com.mysql:mysql-connector-j:8.0.32'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.5'
+
+
 }
 
 test {
