--- a/module.user-service/build.gradle
+++ b/module.user-service/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.projectlombok:lombok'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-mysql'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
